# data-engineering-zoomcamp

./: .gitignore  Anotacoes_Tutorial_Alessandro.docx
.devcontainer/: devcontainer.json
aihero/app/: app.py  pyproject.toml  requirements.txt
aihero/app/.streamlit/: secrets.toml
aihero/app/logs/: gh_agent_20260408_110114_49b8af.json  gh_agent_20260408_110200_3f6a4c.json  gh_agent_20260408_110332_025809.json  gh_agent_20260408_110405_77c321.json  gh_agent_20260408_110423_8431a6.json  gh_agent_20260408_114352_f566d2.json
aihero/course/: LLM_AGENT_APYCALL.ipynb  agent.py  check_env.py  getfilesrepo.ipynb  github_repo_processor.py  pyproject.toml
aihero/course/.ipynb_checkpoints/: LLM_AGENT_APYCALL-checkpoint.ipynb  getfilesrepo-checkpoint.ipynb
aihero/project/: githubrepoia.ipynb
